@@ -1347,6 +1347,7 @@
           06-06-26  Bfo     SEGV handler introduced, which allows now to catch bus errors !
           06-06-28  Bfo     SEGV handler ( __try/__except ) introduced for Windows 
           06-06-29  Bfo     SEGV handler for Windows is re-entrant now
+          06-06-29  Bfo     void llm_os9_copyback( regs_type *rp ) introduced (for register dump)
     3.32  06-??-??  Bfo
     ------------------- 
       
